Fix products section carb pattern visibility with proper height and z-index

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -815,17 +815,17 @@
 .products-curved-top::before {
     display: block;
     content: '';
-    height: 100%;
+    height: 120px;
     width: 100%;
     background: url(../images/carb.png) bottom no-repeat;
-    background-size: contain;
+    background-size: cover;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 2;
     transform: rotate(180deg);
-    transform-origin: center;
+    transform-origin: top center;
 }
 
 .products-section::before {
@@ -834,13 +834,13 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 100%;
+    height: 120px;
     width: 100%;
     background: url(../images/carb.png) bottom no-repeat;
-    background-size: contain;
-    z-index: 1;
+    background-size: cover;
+    z-index: 2;
     transform: rotate(180deg);
-    transform-origin: center;
+    transform-origin: top center;
 }
 
 .products-section .section-head .lead {
@@ -850,6 +850,13 @@
 
 .products-section .section-head {
     margin-bottom: 50px;
+    position: relative;
+    z-index: 3;
+}
+
+.products-section .container {
+    position: relative;
+    z-index: 3;
 }
 
 /* FAQ Section Enhancements */
